# xxmotif

./: .gitignore  CMakeLists.txt  INSTALL  README
XXmasker/: XXmasker.pl  XXmasker_aa.pl
XXmasker/lib/: MiscHelpers.pm
XXmasker/lib/Bio/Root/: Root.pm
XXmasker/lib/File/: Glob.pod  Spec.pod
XXmasker/lib/File/Spec/: Unix.pod
conda_recipe/: build.sh  meta.yaml
src/: AbstractKmer.cpp  AbstractKmer.h  Globals.cpp  Globals.h  LogTable.cpp  LogTable.h  Makefile  NullModel.cpp  NullModel.h  ProgressBar.cpp  ProgressBar.h  SmallKmer.cpp  SmallKmer.h  StartModels.cpp  StartModels.h  ThresholdChecker.cpp  ThresholdChecker.h  UngappedKmer.cpp  UngappedKmer.h  UniversalKmer.cpp  UniversalKmer.h  alphabet.cpp  alphabet.h  backgroundDistribution.cpp  backgroundDistribution.h  branch_and_bound-inl.h  branch_and_bound.cpp  branch_and_bound.h  log.cpp  log.h  main.cpp  output.cpp  output.h  pValCalculation.cpp  pValCalculation.h  prodpval_stat.h  seqset.cpp  seqset.h  utils.h
src/aminoacids/: MProGlobal.cpp  MProGlobal.h  StateLib.cpp  StateLib.h  alphabet.cpp  alphabet.h  columnState.cpp  columnState.h  sequence.h  utils.cpp  utils.h
src/elongationPhase/: Extension.cpp  Extension.h  ExtensionTable.cpp  ExtensionTable.h  Kmer.cpp  Kmer.h  Match.h  StartPos.h  elongationCandidates.cpp  elongationCandidates.h  startPosList.h
src/em/: EM.cpp  EM.h  hoNullModel.cpp  hoNullModel.h  hoUtils.h
src/memoryPool/: pool.h  pool_alloc.h
src/nucleotides/: DnaHash.h  conservationScores.cpp  conservationScores.h  motifRegion.cpp  motifRegion.h
src/refinementPhase/: Compare_Motifs.cpp  Compare_Motifs.h  Iterate_Motif.cpp  Iterate_Motif.h  Motif.cpp  Motif.h  MotifContainer.cpp  MotifContainer.h  Refine_Motifs.cpp  Refine_Motifs.h  Sorted_Sites.h  StartPosUpdater-inl.h  StartPosUpdater.cpp  StartPosUpdater.h  StartPosUtils.h  empiricalPvalCalibration.cpp  empiricalPvalCalibration.h
src/seqFormat/: AlignStream.cpp  AlignStream.h  Alignment.cpp  Alignment.h  Clustalw.cpp  Clustalw.h  CustomMultFasta.cpp  CustomMultFasta.h  Fasta.cpp  Fasta.h  FormatContainer.h  SeqExceptions.cpp  SeqExceptions.h
